--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(GetFirstMandatoryNotValidated)
 export(GetMaxValidated_AllSteps)
 export(GetMaxValidated_BeforePos)
 export(GetOnlineZipVersion)
+export(GetPackageVersion)
 export(GetStringStatus)
 export(GetValuesFromChildren)
 export(Get_AdditionalModule_Core_Code)
@@ -39,6 +40,7 @@ export(Get_Workflow_Core_Code)
 export(GlobalSettings)
 export(Insert_Call_to_Config)
 export(LoadCode)
+export(MagellanNTK)
 export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
@@ -83,7 +85,6 @@ export(default_extraModule_code)
 export(default_keep_func)
 export(default_openfile_server)
 export(default_openfile_ui)
-export(default_pos)
 export(demo_workflow)
 export(directoryInput)
 export(dl_server)
@@ -100,7 +101,6 @@ export(errorModal_ui)
 export(find_funs)
 export(format_DT_server)
 export(format_DT_ui)
-export(global)
 export(infos_dataset_server)
 export(infos_dataset_ui)
 export(initComplete)
@@ -108,6 +108,7 @@ export(insert_md_server)
 export(insert_md_ui)
 export(launchGA)
 export(launch_app)
+export(loadApp)
 export(loadapp_server)
 export(loadapp_ui)
 export(mainapp_server)
@@ -187,7 +188,6 @@ import(shinyEffects)
 import(shinyFiles)
 import(shinycssloaders)
 import(shinydashboard)
-import(shinydashboardPlus)
 import(shinyjqui)
 import(shinyjs)
 import(shinythemes)
@@ -216,9 +216,19 @@ importFrom(shiny,tags)
 importFrom(shinyBS,addPopover)
 importFrom(shinyBS,bsCollapse)
 importFrom(shinyBS,bsCollapsePanel)
+importFrom(shinyBS,bsModal)
 importFrom(shinyBS,bsPopover)
 importFrom(shinyBS,bsTooltip)
 importFrom(shinyFiles,shinyDirButton)
+importFrom(shinydashboardPlus,dashboardBadge)
+importFrom(shinydashboardPlus,dashboardControlbar)
+importFrom(shinydashboardPlus,dashboardHeader)
+importFrom(shinydashboardPlus,dashboardPage)
+importFrom(shinydashboardPlus,dashboardSidebar)
+importFrom(shinydashboardPlus,renderUser)
+importFrom(shinydashboardPlus,skinSelector)
+importFrom(shinydashboardPlus,socialButton)
+importFrom(shinydashboardPlus,userOutput)
 importFrom(shinyjqui,jqui_draggable)
 importFrom(shinyjs,extendShinyjs)
 importFrom(shinyjs,info)
@@ -227,4 +237,3 @@ importFrom(shinyjs,useShinyjs)
 importFrom(stats,setNames)
 importFrom(utils,compareVersion)
 importFrom(utils,data)
-importFrom(utils,globalVariables)
