--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Depends: R (>= 4.4.0)
 Imports: 
     S4Vectors,
     methods,
-    DT,
+    shinyWidgets, stringi, openxlsx, markdown,
+    DT, sos,
     shiny,
     shinydashboardPlus, shiny, shinydashboard, shinyEffects,
     htmlwidgets,
@@ -52,6 +53,8 @@ Imports:
     rhandsontable, shinycssloaders, shinythemes, tibble,
     vioplot, webshot
 Collate: 
+    app.R
+    settings.R
     mod_chooseDir.R
     mod_change_assay.R
     mod_choose_pipeline.R
@@ -73,7 +76,6 @@ Collate:
     mod_dyn_widgets.R
     config_class.R
     doc-data.R
-    global.R
     mod_load_workflow.R
     load_code.R
     mod_default_plugins.R
@@ -117,7 +119,7 @@ Collate:
     prostar.R
     mod_loadapp.R
     mod_mainapp.R
-biocViews: Software, WorkflowStep
+biocViews: Software, WorkflowStep, Proteomics, GUI
 Encoding: UTF-8
 RoxygenNote: 7.3.1
 URL: https://github.com/prostarproteomics/MagellanNTK
