--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ export(createModuleTemplate)
 export(dataManager_server)
 export(dataManager_ui)
 export(dataModal)
+export(default.config)
 export(default_EDA_server)
 export(default_EDA_ui)
 export(default_add_func)
@@ -101,6 +102,7 @@ export(errorModal_ui)
 export(find_funs)
 export(format_DT_server)
 export(format_DT_ui)
+export(infos_dataset)
 export(infos_dataset_server)
 export(infos_dataset_ui)
 export(initComplete)
@@ -140,6 +142,7 @@ export(nav_server)
 export(nav_ui)
 export(navbarPageWithInputs)
 export(navbarPageWithText)
+export(open_dataset)
 export(open_dataset_server)
 export(open_dataset_ui)
 export(open_demoDataset_server)
@@ -210,9 +213,22 @@ importFrom(methods,setMethod)
 importFrom(sass,sass)
 importFrom(sass,sass_file)
 importFrom(shiny,NS)
+importFrom(shiny,br)
+importFrom(shiny,column)
+importFrom(shiny,fluidPage)
+importFrom(shiny,fluidRow)
+importFrom(shiny,h3)
+importFrom(shiny,moduleServer)
+importFrom(shiny,observe)
+importFrom(shiny,observeEvent)
 importFrom(shiny,reactive)
+importFrom(shiny,reactiveValues)
+importFrom(shiny,req)
+importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
+importFrom(shiny,textOutput)
+importFrom(shiny,uiOutput)
 importFrom(shinyBS,addPopover)
 importFrom(shinyBS,bsCollapse)
 importFrom(shinyBS,bsCollapsePanel)
