--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,8 +57,7 @@ export(Tools_Templates)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
-export(bsmodal_server)
-export(bsmodal_ui)
+export(bug_report)
 export(call.func)
 export(choose.dir)
 export(chooseDir)
@@ -77,15 +76,9 @@ export(dataManager_server)
 export(dataManager_ui)
 export(dataModal)
 export(default.config)
-export(default_EDA_server)
-export(default_EDA_ui)
 export(default_add_func)
-export(default_export_server)
-export(default_export_ui)
 export(default_extraModule_code)
 export(default_keep_func)
-export(default_openfile_server)
-export(default_openfile_ui)
 export(demo_workflow)
 export(directoryInput)
 export(dl_server)
@@ -117,8 +110,12 @@ export(mainapp_server)
 export(mainapp_ui)
 export(mdEditor_server)
 export(mdEditor_ui)
+export(mod_bsmodal)
+export(mod_bsmodal_server)
+export(mod_bsmodal_ui)
 export(mod_bug_report_server)
 export(mod_bug_report_ui)
+export(mod_change_assay)
 export(mod_check_updates_server)
 export(mod_check_updates_ui)
 export(mod_homepage_server)
@@ -131,10 +128,9 @@ export(mod_popover_for_help_server)
 export(mod_popover_for_help_ui)
 export(mod_release_notes_server)
 export(mod_release_notes_ui)
+export(mod_settings)
 export(mod_settings_server)
 export(mod_settings_ui)
-export(mod_view_dataset_server)
-export(mod_view_dataset_ui)
 export(modalDialog_server)
 export(modalDialog_ui)
 export(module.exists)
@@ -148,6 +144,7 @@ export(open_dataset_ui)
 export(open_demoDataset_server)
 export(open_demoDataset_ui)
 export(pkgs.require)
+export(popover_for_help)
 export(pull_fifo)
 export(push_fifo)
 export(readDirectoryInput)
@@ -161,6 +158,7 @@ export(timeline_v_server)
 export(timeline_v_ui)
 export(toggleWidget)
 export(updateDirectoryInput)
+export(view_dataset)
 export(view_dataset_server)
 export(view_dataset_ui)
 export(write.excel)
@@ -203,6 +201,7 @@ importFrom(BiocManager,install)
 importFrom(BiocManager,version)
 importFrom(DT,"%>%")
 importFrom(DT,DTOutput)
+importFrom(DT,datatable)
 importFrom(DT,formatStyle)
 importFrom(DT,renderDT)
 importFrom(DT,styleEqual)
@@ -212,23 +211,37 @@ importFrom(methods,new)
 importFrom(methods,setMethod)
 importFrom(sass,sass)
 importFrom(sass,sass_file)
+importFrom(shiny,HTML)
 importFrom(shiny,NS)
+importFrom(shiny,absolutePanel)
+importFrom(shiny,actionButton)
 importFrom(shiny,br)
 importFrom(shiny,column)
+importFrom(shiny,div)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
+importFrom(shiny,hr)
 importFrom(shiny,moduleServer)
+importFrom(shiny,numericInput)
 importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
+importFrom(shiny,p)
 importFrom(shiny,reactive)
+importFrom(shiny,reactiveVal)
 importFrom(shiny,reactiveValues)
+importFrom(shiny,renderUI)
 importFrom(shiny,req)
+importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
+importFrom(shiny,sliderInput)
+importFrom(shiny,tabPanel)
+importFrom(shiny,tabsetPanel)
 importFrom(shiny,tagList)
 importFrom(shiny,tags)
 importFrom(shiny,textOutput)
 importFrom(shiny,uiOutput)
+importFrom(shiny,wellPanel)
 importFrom(shinyBS,addPopover)
 importFrom(shinyBS,bsCollapse)
 importFrom(shinyBS,bsCollapsePanel)
@@ -246,6 +259,7 @@ importFrom(shinydashboardPlus,skinSelector)
 importFrom(shinydashboardPlus,socialButton)
 importFrom(shinydashboardPlus,userOutput)
 importFrom(shinyjqui,jqui_draggable)
+importFrom(shinyjqui,jqui_resizable)
 importFrom(shinyjs,extendShinyjs)
 importFrom(shinyjs,info)
 importFrom(shinyjs,inlineCSS)
