--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,6 @@ export(Get_Code_for_ObserveEvent_widgets)
 export(Get_Code_for_dataOut)
 export(Get_Code_for_rv_reactiveValues)
 export(Get_Workflow_Core_Code)
-export(GlobalSettings)
 export(Insert_Call_to_Config)
 export(LoadCode)
 export(MagellanNTK)
@@ -99,6 +98,7 @@ export(infos_dataset)
 export(infos_dataset_server)
 export(infos_dataset_ui)
 export(initComplete)
+export(insert_md)
 export(insert_md_server)
 export(insert_md_ui)
 export(launchGA)
@@ -148,7 +148,6 @@ export(popover_for_help)
 export(pull_fifo)
 export(push_fifo)
 export(readDirectoryInput)
-export(run_workflow)
 export(shinyInput)
 export(shinyOutput)
 export(shinyValue)
@@ -161,6 +160,9 @@ export(updateDirectoryInput)
 export(view_dataset)
 export(view_dataset_server)
 export(view_dataset_ui)
+export(workflow)
+export(workflow_server)
+export(workflow_ui)
 export(write.excel)
 export(write_config_func)
 export(write_header_server_func)
@@ -215,6 +217,7 @@ importFrom(shiny,HTML)
 importFrom(shiny,NS)
 importFrom(shiny,absolutePanel)
 importFrom(shiny,actionButton)
+importFrom(shiny,actionLink)
 importFrom(shiny,br)
 importFrom(shiny,column)
 importFrom(shiny,div)
@@ -222,6 +225,8 @@ importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
 importFrom(shiny,hr)
+importFrom(shiny,htmlOutput)
+importFrom(shiny,includeMarkdown)
 importFrom(shiny,moduleServer)
 importFrom(shiny,numericInput)
 importFrom(shiny,observe)
