--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,7 +160,7 @@ export(updateDirectoryInput)
 export(view_dataset)
 export(view_dataset_server)
 export(view_dataset_ui)
-export(workflow)
+export(workflowApp)
 export(workflow_server)
 export(workflow_ui)
 export(write.excel)
