--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(Tools_Templates)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
+export(addDatasets)
 export(bug_report)
 export(call.func)
 export(choose.dir)
@@ -100,6 +101,7 @@ export(initComplete)
 export(insert_md)
 export(insert_md_server)
 export(insert_md_ui)
+export(keepDatasets)
 export(launchGA)
 export(launch_app)
 export(loadApp)
