--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(initComplete)
 export(insert_md)
 export(insert_md_server)
 export(insert_md_ui)
+export(is.Magellan.compliant)
 export(keepDatasets)
 export(launchGA)
 export(launch_app)
