--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(loadapp_server)
 export(loadapp_ui)
 export(mainapp_server)
 export(mainapp_ui)
+export(mdEditor)
 export(mdEditor_server)
 export(mdEditor_ui)
 export(mod_bsmodal)
@@ -145,11 +146,15 @@ export(open_dataset_server)
 export(open_dataset_ui)
 export(open_demoDataset_server)
 export(open_demoDataset_ui)
+export(open_workflow)
+export(open_workflow_server)
+export(open_workflow_ui)
 export(pkgs.require)
 export(popover_for_help)
 export(pull_fifo)
 export(push_fifo)
 export(readDirectoryInput)
+export(runDirinputExample)
 export(shinyInput)
 export(shinyOutput)
 export(shinyValue)
