--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ export(mod_bug_report_ui)
 export(mod_change_assay)
 export(mod_check_updates_server)
 export(mod_check_updates_ui)
+export(mod_homepage)
 export(mod_homepage_server)
 export(mod_homepage_ui)
 export(mod_load_workflow_server)
@@ -158,6 +159,7 @@ export(runDirinputExample)
 export(shinyInput)
 export(shinyOutput)
 export(shinyValue)
+export(source_wf_files)
 export(timeline_h_server)
 export(timeline_h_ui)
 export(timeline_v_server)
