--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(insert_md)
 export(insert_md_server)
 export(insert_md_ui)
 export(is.Magellan.compliant)
+export(is.substr)
 export(keepDatasets)
 export(launchGA)
 export(launch_app)
@@ -159,6 +160,7 @@ export(runDirinputExample)
 export(shinyInput)
 export(shinyOutput)
 export(shinyValue)
+export(source_shinyApp_files)
 export(source_wf_files)
 export(timeline_h_server)
 export(timeline_h_ui)
