--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,8 @@ export(mainapp_ui)
 export(mdEditor)
 export(mdEditor_server)
 export(mdEditor_ui)
+export(mod_SweetAlert_server)
+export(mod_SweetAlert_ui)
 export(mod_bsmodal)
 export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
@@ -222,6 +224,7 @@ importFrom(S4Vectors,DataFrame)
 importFrom(htmlwidgets,JS)
 importFrom(methods,new)
 importFrom(methods,setMethod)
+importFrom(rclipboard,rclipButton)
 importFrom(sass,sass)
 importFrom(sass,sass_file)
 importFrom(shiny,HTML)
@@ -265,6 +268,7 @@ importFrom(shinyBS,bsModal)
 importFrom(shinyBS,bsPopover)
 importFrom(shinyBS,bsTooltip)
 importFrom(shinyFiles,shinyDirButton)
+importFrom(shinyWidgets,sendSweetAlert)
 importFrom(shinydashboardPlus,dashboardBadge)
 importFrom(shinydashboardPlus,dashboardControlbar)
 importFrom(shinydashboardPlus,dashboardHeader)
