--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(NavPage)
 export(PrepareData2Send)
 export(Prostar)
 export(ResetChildren)
+export(Save_Dataset)
 export(Save_Dataset_server)
 export(Save_Dataset_ui)
 export(Save_Object)
@@ -78,7 +79,6 @@ export(dataModal)
 export(default_add_func)
 export(default_extraModule_code)
 export(default_keep_func)
-export(demo_workflow)
 export(directoryInput)
 export(dl_server)
 export(dl_ui)
@@ -235,6 +235,7 @@ importFrom(shiny,actionLink)
 importFrom(shiny,br)
 importFrom(shiny,column)
 importFrom(shiny,div)
+importFrom(shiny,downloadHandler)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
