--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,9 +67,9 @@ export(chooseDir_ui)
 export(choose_pipeline_server)
 export(choose_pipeline_ui)
 export(clipboard)
-export(convert_conf)
-export(convert_server)
-export(convert_ui)
+export(convert_dataset)
+export(convert_dataset_server)
+export(convert_dataset_ui)
 export(createExtraFunctions)
 export(createExtraModule)
 export(createModuleTemplate)
@@ -157,6 +157,7 @@ export(pkgs.require)
 export(popover_for_help)
 export(pull_fifo)
 export(push_fifo)
+export(readCustomizableFuncs)
 export(readDirectoryInput)
 export(runDirinputExample)
 export(shinyInput)
