--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,7 +185,6 @@ import(DAPAR)
 import(DAPARdata)
 import(DT)
 import(DaparToolshedData)
-import(DaparViz)
 import(QFeatures)
 import(data.table)
 import(future)
@@ -194,6 +193,7 @@ import(gplots)
 import(highcharter)
 import(htmlwidgets)
 import(later)
+import(omXplore)
 import(promises)
 import(rhandsontable)
 import(shiny)
