--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,9 @@ export(mod_load_package_server)
 export(mod_load_package_ui)
 export(mod_load_workflow_server)
 export(mod_load_workflow_ui)
+export(mod_modalDialog)
+export(mod_modalDialog_server)
+export(mod_modalDialog_ui)
 export(mod_navbar_menu_server)
 export(mod_navbar_menu_ui)
 export(mod_popover_for_help_server)
@@ -136,8 +139,6 @@ export(mod_release_notes_ui)
 export(mod_settings)
 export(mod_settings_server)
 export(mod_settings_ui)
-export(modalDialog_server)
-export(modalDialog_ui)
 export(module.exists)
 export(nav_server)
 export(nav_ui)
