--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,7 @@ export(Build_nav_v_ui)
 export(CheckProcessCode)
 export(CheckWorkflowDir)
 export(CleanSourceCode)
-export(Compute_PCA_nbDimensions)
 export(Config)
-export(Create_Pipeline_Description_source_file)
-export(Create_md_file)
 export(Debug_Infos)
 export(Debug_Infos_server)
 export(Debug_Infos_ui)
@@ -23,7 +20,6 @@ export(GetExtension)
 export(GetFirstMandatoryNotValidated)
 export(GetMaxValidated_AllSteps)
 export(GetMaxValidated_BeforePos)
-export(GetOnlineZipVersion)
 export(GetPackageVersion)
 export(GetStringStatus)
 export(GetValuesFromChildren)
@@ -43,7 +39,6 @@ export(MagellanNTK)
 export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
-export(Prostar)
 export(ResetChildren)
 export(Save_Dataset)
 export(Save_Dataset_server)
@@ -60,7 +55,6 @@ export(Upload_Object)
 export(addDatasets)
 export(bug_report)
 export(call.func)
-export(check_updates)
 export(choose.dir)
 export(chooseDir)
 export(chooseDir_server)
@@ -69,16 +63,11 @@ export(clipboard)
 export(convert_dataset)
 export(convert_dataset_server)
 export(convert_dataset_ui)
-export(createExtraFunctions)
-export(createExtraModule)
-export(createModuleTemplate)
 export(dataModal)
-export(default_add_func)
-export(default_extraModule_code)
-export(default_keep_func)
 export(directoryInput)
 export(dl_server)
 export(dl_ui)
+export(download_btns)
 export(download_btns_server)
 export(download_btns_ui)
 export(download_server)
@@ -86,9 +75,11 @@ export(download_ui)
 export(dyn_widgets)
 export(dyn_widgets_server)
 export(dyn_widgets_ui)
+export(errorModal)
 export(errorModal_server)
 export(errorModal_ui)
 export(find_funs)
+export(format_DT)
 export(format_DT_server)
 export(format_DT_ui)
 export(infos_dataset)
@@ -104,13 +95,16 @@ export(keepDatasets)
 export(launchGA)
 export(launch_app)
 export(loadApp)
+export(load_package)
 export(loadapp_server)
 export(loadapp_ui)
+export(mainapp)
 export(mainapp_server)
 export(mainapp_ui)
 export(mdEditor)
 export(mdEditor_server)
 export(mdEditor_ui)
+export(mod_SweetAlert)
 export(mod_SweetAlert_server)
 export(mod_SweetAlert_ui)
 export(mod_bsmodal)
@@ -118,6 +112,7 @@ export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
 export(mod_bug_report_server)
 export(mod_bug_report_ui)
+export(mod_check_updates)
 export(mod_check_updates_server)
 export(mod_check_updates_ui)
 export(mod_homepage)
@@ -176,36 +171,15 @@ export(workflowApp)
 export(workflow_server)
 export(workflow_ui)
 export(write.excel)
-export(write_config_func)
-export(write_header_server_func)
-export(write_process_renderUI_for_steps)
-export(write_stepUI_template)
-export(write_ui_func)
-import(DAPAR)
-import(DAPARdata)
 import(DT)
-import(data.table)
-import(future)
-import(ggplot2)
-import(gplots)
 import(highcharter)
-import(htmlwidgets)
-import(later)
-import(promises)
-import(rhandsontable)
 import(shiny)
-import(shinyAce)
 import(shinyBS)
 import(shinyEffects)
 import(shinyFiles)
-import(shinycssloaders)
 import(shinydashboard)
 import(shinyjqui)
 import(shinyjs)
-import(shinythemes)
-import(tibble)
-import(vioplot)
-import(webshot)
 importFrom(BiocGenerics,get)
 importFrom(BiocManager,version)
 importFrom(DT,"%>%")
