--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,19 +64,16 @@ export(convert_dataset_server)
 export(convert_dataset_ui)
 export(dataModal)
 export(directoryInput)
-export(dl_server)
-export(dl_ui)
 export(download_btns)
 export(download_btns_server)
 export(download_btns_ui)
-export(download_server)
-export(download_ui)
 export(dyn_widgets)
 export(dyn_widgets_server)
 export(dyn_widgets_ui)
 export(errorModal)
 export(errorModal_server)
 export(errorModal_ui)
+export(file.sep)
 export(find_funs)
 export(format_DT)
 export(format_DT_server)
@@ -88,7 +85,10 @@ export(initComplete)
 export(insert_md)
 export(insert_md_server)
 export(insert_md_ui)
+export(is.Darwin)
+export(is.Linux)
 export(is.Magellan.compliant)
+export(is.Windows)
 export(is.substr)
 export(keepDatasets)
 export(launchGA)
@@ -111,6 +111,9 @@ export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
 export(mod_bug_report_server)
 export(mod_bug_report_ui)
+export(mod_download_dataset)
+export(mod_download_dataset_server)
+export(mod_download_dataset_ui)
 export(mod_homepage)
 export(mod_homepage_server)
 export(mod_homepage_ui)
