--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,12 +67,18 @@ export(directoryInput)
 export(download_btns)
 export(download_btns_server)
 export(download_btns_ui)
+export(download_dataset)
+export(download_dataset_server)
+export(download_dataset_ui)
 export(dyn_widgets)
 export(dyn_widgets_server)
 export(dyn_widgets_ui)
 export(errorModal)
 export(errorModal_server)
 export(errorModal_ui)
+export(export_dataset)
+export(export_dataset_server)
+export(export_dataset_ui)
 export(file.sep)
 export(find_funs)
 export(format_DT)
@@ -111,9 +117,6 @@ export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
 export(mod_bug_report_server)
 export(mod_bug_report_ui)
-export(mod_download_dataset)
-export(mod_download_dataset_server)
-export(mod_download_dataset_ui)
 export(mod_homepage)
 export(mod_homepage_server)
 export(mod_homepage_ui)
