update protien_DA pipeline

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,6 +69,8 @@ Collate:
     mod_launch_magellan.R
     mod_observe_dynamic_colourPicker_input.R
     mod_splash.R
+    catch2List.R
+    mod_errorModal.R
     rclip.R
     write_excel.R
     mod_download_dataset.R
