--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(Upload_Object)
 export(addDatasets)
 export(bug_report)
 export(call.func)
+export(catchToList)
 export(choose.dir)
 export(chooseDir)
 export(chooseDir_server)
@@ -96,6 +97,7 @@ export(is.Linux)
 export(is.Magellan.compliant)
 export(is.Windows)
 export(is.substr)
+export(is.validated)
 export(keepDatasets)
 export(launchGA)
 export(launch_app)
@@ -117,6 +119,9 @@ export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
 export(mod_bug_report_server)
 export(mod_bug_report_ui)
+export(mod_errorModal)
+export(mod_errorModal_server)
+export(mod_errorModal_ui)
 export(mod_homepage)
 export(mod_homepage_server)
 export(mod_homepage_ui)
