update protien_DA pipeline

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,7 @@ export(shinyOutput)
 export(shinyValue)
 export(source_shinyApp_files)
 export(source_wf_files)
+export(timeline)
 export(timeline_h_server)
 export(timeline_h_ui)
 export(timeline_v_server)
