--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,9 @@ export(Get_Workflow_Core_Code)
 export(Insert_Call_to_Config)
 export(LoadCode)
 export(MagellanNTK)
+export(MagellanNTK2)
+export(MagellanNTK_server)
+export(MagellanNTK_ui)
 export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
@@ -185,6 +188,7 @@ import(shinyBS)
 import(shinyEffects)
 import(shinyFiles)
 import(shinydashboard)
+import(shinydashboardPlus)
 import(shinyjqui)
 import(shinyjs)
 importFrom(BiocGenerics,get)
@@ -227,6 +231,8 @@ importFrom(shiny,renderUI)
 importFrom(shiny,req)
 importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
+importFrom(shiny,shinyServer)
+importFrom(shiny,shinyUI)
 importFrom(shiny,sliderInput)
 importFrom(shiny,tabPanel)
 importFrom(shiny,tabsetPanel)
