--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ export(Get_Code_for_ObserveEvent_widgets)
 export(Get_Code_for_dataOut)
 export(Get_Code_for_rv_reactiveValues)
 export(Get_Workflow_Core_Code)
+export(InsertBody)
+export(InsertDropdownMenu)
 export(Insert_Call_to_Config)
 export(LoadCode)
 export(MagellanNTK)
@@ -67,6 +69,9 @@ export(convert_dataset)
 export(convert_dataset_server)
 export(convert_dataset_ui)
 export(dataModal)
+export(default.base.URL)
+export(default.funcs)
+export(default.workflow)
 export(directoryInput)
 export(download_btns)
 export(download_btns_server)
@@ -159,7 +164,7 @@ export(pkgs.require)
 export(popover_for_help)
 export(pull_fifo)
 export(push_fifo)
-export(readCustomizableFuncs)
+export(readConfigFile)
 export(readDirectoryInput)
 export(release_notes)
 export(runDirinputExample)
@@ -231,7 +236,6 @@ importFrom(shiny,renderUI)
 importFrom(shiny,req)
 importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
-importFrom(shiny,shinyServer)
 importFrom(shiny,shinyUI)
 importFrom(shiny,sliderInput)
 importFrom(shiny,tabPanel)
