--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,9 @@ export(Update_State_Screens)
 export(Upload_Object)
 export(addDatasets)
 export(bug_report)
+export(build_report)
+export(build_report_server)
+export(build_report_ui)
 export(call.func)
 export(catchToList)
 export(choose.dir)
