--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(FindClosingParenthesis)
 export(Found_Mod_Funcs)
 export(GetExtension)
 export(GetFirstMandatoryNotValidated)
+export(GetListDatasets)
 export(GetMaxValidated_AllSteps)
 export(GetMaxValidated_BeforePos)
 export(GetPackageVersion)
@@ -146,7 +147,6 @@ export(mod_navbar_menu_ui)
 export(mod_popover_for_help_server)
 export(mod_popover_for_help_ui)
 export(mod_release_notes_server)
-export(mod_release_notes_ui)
 export(mod_settings)
 export(mod_settings_server)
 export(mod_settings_ui)
