--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(Get_Code_for_dataOut)
 export(Get_Code_for_rv_reactiveValues)
 export(Get_Workflow_Core_Code)
 export(Insert_Call_to_Config)
+export(Insert_Dev_Sidebar)
+export(Insert_User_Sidebar)
 export(LoadCode)
 export(MagellanNTK)
 export(MagellanNTK2)
