--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,6 +149,7 @@ export(mod_navbar_menu_ui)
 export(mod_popover_for_help_server)
 export(mod_popover_for_help_ui)
 export(mod_release_notes_server)
+export(mod_release_notes_ui)
 export(mod_settings)
 export(mod_settings_server)
 export(mod_settings_ui)
