--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -15,7 +15,7 @@ jobs:
         run: |
           Rscript -e 'install.packages("remotes")' \
                   -e 'remotes::install_deps(dependencies = TRUE)' \
-                  -e 'remotes::install_github("prostarproteomics/pkgdown@github-actions-deploy")'
+                  -e 'remotes::install_github("edyp-lab/pkgdown@github-actions-deploy")'
       - name: Install package
         run: R CMD INSTALL .
       - name: Deploy package
