--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,8 +56,8 @@ Imports:
     rhandsontable, shinycssloaders, shinythemes, tibble,
     vioplot, webshot, rclipboard, BiocManager
 Remotes:
-    https://github.com/edyp-lab/DaparToolshedData.git
-    https://github.com/edyp-lab/omXplore.git
+    git::edyp-lab/DaparToolshedData,
+    git::prostarproteomics/omXplore
 Suggests: 
     rmarkdown, BiocStyle, testthat, shinyTree, knitr, colourpicker, 
     gtools, XML, R.utils, RColorBrewer
